// protoc --proto_path=/usr/local/include/:. --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative  proto/user.proto
//export PATH="$PATH:$(go env GOPATH)/bin"
syntax = "proto3";

package user;
option go_package = "github.com/TranXuanPhong25/ecom/user/proto";
import "google/protobuf/empty.proto";

service UserService {
  rpc CreateUserWithEmailAndPassword(EmailAndPasswordRequest) returns (UserId);
  rpc CheckUserExistByEmailAndPassword(EmailAndPasswordRequest) returns (CheckUserExistByEmailAndPasswordResponse);
  rpc DeleteUserById(UserId) returns (google.protobuf.Empty);
}

message EmailAndPasswordRequest {
  string email = 1;
  string password = 2;
}

message CheckUserExistByEmailAndPasswordResponse {
  bool isExist = 1;
}

message UserId {
  string user_id = 1;
}

